@@ -5,8 +5,10 @@ linstaller (1.52.2-1) emily; urgency=low
     for linstaller! :D)
   * linstaller.py: modules overriding supported via the
     -m and --modules flags.
+  * modules/partdisks: creating a new MBR partition table is
+    now supported.
 
- -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sun, 13 Nov 2011 11:17:47 +0100
+ -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Mon, 28 Nov 2011 18:12:33 +0100
 
 linstaller (1.52.1-1) emily; urgency=low
 
